--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <h2>I'm a Web Developer</h2>
     <hr>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-    <img src="./assets/images/Movie Ranking project.png" height="200" alt="Movie Ranking Project Preview">
+    <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project Preview">
 <!-- TODO 5: Add a link to the project pages -->
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-    <img src="./assets/images/Birthday Invite Project.png" height="200" alt="Birthday Invite Project Preview">
+    <img src="./assets/images/Birthday Invite.png" height="200" alt="Birthday Invite Project Preview">
     <hr>
 <!-- TODO 7: Add the Contact Me and About Me page links -->
     <a href="./public/about.html">About Me</a>
